--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Concentration Game</title>
 </head>
 <body>
-    
+    <h1>Concentration</h1>
+    <h3>Can you beat the clock?</h3>
+    <table>
+        <tr class= "row1">
+            <td id="cell1"></td>
+            <td id="cell2"></td>
+            <td id="cell3"></td>
+            <td id="cell4"></td>
+        </tr>
+        <tr class= "row2">
+            <td id="cell1"></td>
+            <td id="cell2"></td>
+            <td id="cell3"></td>
+            <td id="cell4"></td>
+        </tr>
+        <tr class= "row3">
+            <td id="cell1"></td>
+            <td id="cell2"></td>
+            <td id="cell3"></td>
+            <td id="cell4"></td>
+        </tr>
+    </table>
 </body>
 </html>
