--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
 <body>
     <h1>Concentration</h1>
     <h3>Can you beat the clock?</h3>
-    <table>
-        <tr class= "row1">
-            <td id="cell1"></td>
-            <td id="cell2"></td>
-            <td id="cell3"></td>
-            <td id="cell4"></td>
-        </tr>
-        <tr class= "row2">
-            <td id="cell1"></td>
-            <td id="cell2"></td>
-            <td id="cell3"></td>
-            <td id="cell4"></td>
-        </tr>
-        <tr class= "row3">
-            <td id="cell1"></td>
-            <td id="cell2"></td>
-            <td id="cell3"></td>
-            <td id="cell4"></td>
-        </tr>
-    </table>
+    <section id="board">
+        <div id="r1c1">cell</div>
+        <div id="r1c2">cell</div>
+        <div id="r1c3">cell</div>
+        <div id="r1c4">cell</div>        
+
+        <div id="r2c1">cell</div>
+        <div id="r2c2">cell</div>
+        <div id="r2c3">cell</div>
+        <div id="r2c4">cell</div>
+
+        <div id="r3c1">cell</div>
+        <div id="r3c2">cell</div>
+        <div id="r3c3">cell</div>
+        <div id="r3c4">cell</div>
+    </section>
+    <button>Start</button>
+    <button>Play Again</button>
 </body>
 </html>
