card display added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Concentration</h1>
-    <h3>Can you beat the clock?</h3>
+    <h4>Can you beat the clock?</h3>
     <section id="board">
         <div id="r1c1">cell</div>
         <div id="r1c2">cell</div>
@@ -28,7 +28,9 @@
         <div id="r3c3">cell</div>
         <div id="r3c4">cell</div>
     </section>
-    <button>Start</button>
-    <button>Play Again</button>
+    <section id="bottom">
+        <button id="button1">Start</button>
+        <button id="button2">Play Again</button>
+    </section>
 </body>
 </html>
