--- a/index.html
+++ b/index.html
@@ -6,30 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Concentration Game</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="app.js"></script>
+    <script defer src="app.js"></script>
 
 </head>
 <body>
     <h1>Concentration</h1>
-    <h4>Can you beat the clock?</h3>
+    <h4>Test your memory</h4>
     <section id="board">
-        <div id="r1c1">cell</div>
-        <div id="r1c2">cell</div>
-        <div id="r1c3">cell</div>
-        <div id="r1c4">cell</div>        
+        <div id="r1c1"></div>
+        <div id="r1c2"></div>
+        <div id="r1c3"></div>
+        <div id="r1c4"></div>        
 
-        <div id="r2c1">cell</div>
-        <div id="r2c2">cell</div>
-        <div id="r2c3">cell</div>
-        <div id="r2c4">cell</div>
+        <div id="r2c1"></div>
+        <div id="r2c2"></div>
+        <div id="r2c3"></div>
+        <div id="r2c4"></div>
 
-        <div id="r3c1">cell</div>
-        <div id="r3c2">cell</div>
-        <div id="r3c3">cell</div>
-        <div id="r3c4">cell</div>
+        <div id="r3c1"></div>
+        <div id="r3c2"></div>
+        <div id="r3c3"></div>
+        <div id="r3c4"></div>
     </section>
     <section id="bottom">
         <button id="button1">Start</button>
+        <div id="clock">
+            <span id="seconds">30</span>
+        </div>
         <button id="button2">Play Again</button>
     </section>
 </body>
