change board to container

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <h1>Concentration</h1>
     <h4>Test your memory</h4>
-    <section id="board">
-        <div id="r1c1"></div>
+    <div class="container" id="board">
+        <div class="one"id="r1c1"></div>
         <div id="r1c2"></div>
         <div id="r1c3"></div>
         <div id="r1c4"></div>        
@@ -27,7 +27,7 @@
         <div id="r3c2"></div>
         <div id="r3c3"></div>
         <div id="r3c4"></div>
-    </section>
+    </div>
     <section id="bottom">
         <button id="button1">Start</button>
         <div id="clock">
