map cards to choices

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
     <h1>Concentration</h1>
     <h4>Test your memory</h4>
     <div class="container" id="board">
-        <div class="one"id="r1c1"></div>
-        <div id="r1c2"></div>
-        <div id="r1c3"></div>
-        <div id="r1c4"></div>        
+        <div class="card1" id="r1c1"></div>
+        <div class="card2" id="r1c2"></div>
+        <div class="card3" id="r1c3"></div>
+        <div class="card4" id="r1c4"></div>        
 
-        <div id="r2c1"></div>
-        <div id="r2c2"></div>
-        <div id="r2c3"></div>
-        <div id="r2c4"></div>
+        <div class="card5" id="r2c1"></div>
+        <div class="card6" id="r2c2"></div>
+        <div class="card7" id="r2c3"></div>
+        <div class="card8" id="r2c4"></div>
 
-        <div id="r3c1"></div>
-        <div id="r3c2"></div>
-        <div id="r3c3"></div>
-        <div id="r3c4"></div>
+        <div class="card9" id="r3c1"></div>
+        <div class="card10" id="r3c2"></div>
+        <div class="card11" id="r3c3"></div>
+        <div class="card12" id="r3c4"></div>
     </div>
     <section id="bottom">
         <button id="button1">Start</button>
