--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 <body>
     <h1>Concentration</h1>
     <h4>Test your memory</h4>
+    <section id="bottom">
+        <button id="button1">Start</button>
+        <div id="clock">
+            <span id="timer">30</span>
+        </div>
+    </section>
     <div class="container" id="board">
         <div class="red" id="r1c1"></div>
         <div class="red" id="r1c2"></div>
@@ -28,12 +34,5 @@
         <div class="aqua" id="r3c3"></div>
         <div class="aqua" id="r3c4"></div>
     </div>
-    <section id="bottom">
-        <button id="button1">Start</button>
-        <div id="clock">
-            <span id="seconds">30</span>
-        </div>
-        <button id="button2">Play Again</button>
-    </section>
 </body>
 </html>
