win/lose msg and change back working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Concentration</h1>
-    <h4>Test your memory</h4>
+    <div id = "message">Test your memory</div>
     <section id="bottom">
         <button id="button1">Start</button>
         <div id="clock">
