play again btn, stop timer at win

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
     <h1>Concentration</h1>
     <div id = "message">Test your memory</div>
     <section id="bottom">
-        <button id="button1">Start</button>
+        <button id="button1">START</button>
         <div id="clock">
             <span id="timer">30</span>
         </div>
+        <button id="button2">PLAY AGAIN</button>
     </section>
     <div class="container" id="board">
         <div class="red" id="r1c1"></div>
