--- a/index.html
+++ b/index.html
@@ -4,36 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Concentration Game</title>
+    <title>Memory Game</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Coiny&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <script defer src="app.js"></script>
-
 </head>
 <body>
-    <h1>Concentration</h1>
-    <div id = "message">Test your memory</div>
+    <h1>M E M O R Y</h1>
+    <div id = "message">How much can you concentrate?</div>
     <section id="bottom">
-        <button id="button1">START</button>
+        <button id="button1">start</button>
         <div id="clock">
             <span id="timer">30</span>
         </div>
-        <button id="button2">PLAY AGAIN</button>
+        <button id="button2">play again</button>
     </section>
     <div class="container" id="board">
-        <div class="red" id="r1c1"></div>
-        <div class="red" id="r1c2"></div>
-        <div class="purple" id="r1c3"></div>
-        <div class="purple" id="r1c4"></div>        
+        <div class="lightseagreen" id="r1c1"></div>
+        <div class="lightseagreen" id="r1c2"></div>
+        <div class="plum" id="r1c3"></div>
+        <div class="plum" id="r1c4"></div>        
 
-        <div class="green" id="r2c1"></div>
-        <div class="green" id="r2c2"></div>
-        <div class="blue" id="r2c3"></div>
-        <div class="blue" id="r2c4"></div>
+        <div class="lightgreen" id="r2c1"></div>
+        <div class="lightgreen" id="r2c2"></div>
+        <div class="lightblue" id="r2c3"></div>
+        <div class="lightblue" id="r2c4"></div>
 
-        <div class="orange" id="r3c1"></div>
-        <div class="orange" id="r3c2"></div>
-        <div class="aqua" id="r3c3"></div>
-        <div class="aqua" id="r3c4"></div>
+        <div class="lightcoral" id="r3c1"></div>
+        <div class="lightcoral" id="r3c2"></div>
+        <div class="mediumpurple" id="r3c3"></div>
+        <div class="mediumpurple" id="r3c4"></div>
     </div>
 </body>
 </html>
